# gitk-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  rustfmt.toml  tarpaulin.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml  security.yml
benches/: commit_streaming.rs  git_operations.rs  ui_rendering.rs
benches_disabled/: commit_streaming.rs  git_operations.rs  ui_rendering.rs
proptest-regressions/git/: repository.txt  security.txt
src/: app.rs  lib.rs  main.rs
src/git/: commands.rs  commit.rs  commits.rs  diff.rs  error_handling.rs  mod.rs  operations.rs  platform_security.rs  references.rs  remotes.rs  repository.rs  security.rs  stash.rs  stream.rs  tags.rs  views.rs
src/models/: commit.rs  mod.rs  repository.rs
src/state/: app_state.rs  config.rs  mod.rs
src/ui/: commit_graph.rs  diff_viewer.rs  graph.rs  main_window.rs  mod.rs  references.rs  search.rs  views.rs
tests/fixtures/mock_data/: sample_commits.json
tests/integration/: main.rs  mod.rs
tests_disabled/fixtures/: README.md
tests_disabled/integration/: main.rs  mod.rs
